dataset1235/2025-2/2868285114/users/3240599857/executions/3071719669_1435819351.log
== RUN (2025-08-28 22:31:05)
-- CODE: 
peso_gramas = float(input())
quant_diaria_gramas = float(input())
cincodias = quant_diaria_gramas*5
resto = peso_gramas - cincodias
print(roud(resto,2))
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
1034.4
18.55
---- correct output:
941.65
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 5, in <module>
    print(roud(resto,2))
          ^^^^
NameError: name 'roud' is not defined. Did you mean: 'round'?
-- TEST CASE 2:
---- input:
1427.6
21.91
---- correct output:
1318.05
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 5, in <module>
    print(roud(resto,2))
          ^^^^
NameError: name 'roud' is not defined. Did you mean: 'round'?
-- TEST CASE 3:
---- input:
2807.90
40.38
---- correct output:
2606.0
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 5, in <module>
    print(roud(resto,2))
          ^^^^
NameError: name 'roud' is not defined. Did you mean: 'round'?
-- TEST CASE 4:
---- input:
1000.3333
20.11
---- correct output:
899.78
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 5, in <module>
    print(roud(resto,2))
          ^^^^
NameError: name 'roud' is not defined. Did you mean: 'round'?
-- TEST CASE 5:
---- input:
8000.3333
20.11
---- correct output:
7899.78
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 5, in <module>
    print(roud(resto,2))
          ^^^^
NameError: name 'roud' is not defined. Did you mean: 'round'?
-- TEST CASE 6:
---- input:
2912
21.80
---- correct output:
2803.0
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 5, in <module>
    print(roud(resto,2))
          ^^^^
NameError: name 'roud' is not defined. Did you mean: 'round'?
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-08-28 22:29:35)
-- CODE: 
peso_gramas = float(input())
quant_diaria_gramas = float(input())
quatrodias = quant_diaria_gramas*4
resto = peso_gramas - quatrodias
print(roud(resto,2))
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
1034.4
18.55
---- correct output:
941.65
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 5, in <module>
    print(roud(resto,2))
          ^^^^
NameError: name 'roud' is not defined. Did you mean: 'round'?
-- TEST CASE 2:
---- input:
1427.6
21.91
---- correct output:
1318.05
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 5, in <module>
    print(roud(resto,2))
          ^^^^
NameError: name 'roud' is not defined. Did you mean: 'round'?
-- TEST CASE 3:
---- input:
2807.90
40.38
---- correct output:
2606.0
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 5, in <module>
    print(roud(resto,2))
          ^^^^
NameError: name 'roud' is not defined. Did you mean: 'round'?
-- TEST CASE 4:
---- input:
1000.3333
20.11
---- correct output:
899.78
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 5, in <module>
    print(roud(resto,2))
          ^^^^
NameError: name 'roud' is not defined. Did you mean: 'round'?
-- TEST CASE 5:
---- input:
8000.3333
20.11
---- correct output:
7899.78
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 5, in <module>
    print(roud(resto,2))
          ^^^^
NameError: name 'roud' is not defined. Did you mean: 'round'?
-- TEST CASE 6:
---- input:
2912
21.80
---- correct output:
2803.0
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 5, in <module>
    print(roud(resto,2))
          ^^^^
NameError: name 'roud' is not defined. Did you mean: 'round'?
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-08-28 22:31:18)
-- CODE: 
peso_gramas = float(input())
quant_diaria_gramas = float(input())
cincodias = quant_diaria_gramas*5
resto = peso_gramas - cincodias
print(roud(resto,5))
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
1034.4
18.55
---- correct output:
941.65
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 5, in <module>
    print(roud(resto,5))
          ^^^^
NameError: name 'roud' is not defined. Did you mean: 'round'?
-- TEST CASE 2:
---- input:
1427.6
21.91
---- correct output:
1318.05
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 5, in <module>
    print(roud(resto,5))
          ^^^^
NameError: name 'roud' is not defined. Did you mean: 'round'?
-- TEST CASE 3:
---- input:
2807.90
40.38
---- correct output:
2606.0
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 5, in <module>
    print(roud(resto,5))
          ^^^^
NameError: name 'roud' is not defined. Did you mean: 'round'?
-- TEST CASE 4:
---- input:
1000.3333
20.11
---- correct output:
899.78
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 5, in <module>
    print(roud(resto,5))
          ^^^^
NameError: name 'roud' is not defined. Did you mean: 'round'?
-- TEST CASE 5:
---- input:
8000.3333
20.11
---- correct output:
7899.78
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 5, in <module>
    print(roud(resto,5))
          ^^^^
NameError: name 'roud' is not defined. Did you mean: 'round'?
-- TEST CASE 6:
---- input:
2912
21.80
---- correct output:
2803.0
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 5, in <module>
    print(roud(resto,5))
          ^^^^
NameError: name 'roud' is not defined. Did you mean: 'round'?
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-08-28 22:31:19)
-- CODE: 
peso_gramas = float(input())
quant_diaria_gramas = float(input())
cincodias = quant_diaria_gramas*5
resto = peso_gramas - cincodias
print(roud(resto,5))
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
1034.4
18.55
---- correct output:
941.65
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 5, in <module>
    print(roud(resto,5))
          ^^^^
NameError: name 'roud' is not defined. Did you mean: 'round'?
-- TEST CASE 2:
---- input:
1427.6
21.91
---- correct output:
1318.05
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 5, in <module>
    print(roud(resto,5))
          ^^^^
NameError: name 'roud' is not defined. Did you mean: 'round'?
-- TEST CASE 3:
---- input:
2807.90
40.38
---- correct output:
2606.0
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 5, in <module>
    print(roud(resto,5))
          ^^^^
NameError: name 'roud' is not defined. Did you mean: 'round'?
-- TEST CASE 4:
---- input:
1000.3333
20.11
---- correct output:
899.78
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 5, in <module>
    print(roud(resto,5))
          ^^^^
NameError: name 'roud' is not defined. Did you mean: 'round'?
-- TEST CASE 5:
---- input:
8000.3333
20.11
---- correct output:
7899.78
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 5, in <module>
    print(roud(resto,5))
          ^^^^
NameError: name 'roud' is not defined. Did you mean: 'round'?
-- TEST CASE 6:
---- input:
2912
21.80
---- correct output:
2803.0
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 5, in <module>
    print(roud(resto,5))
          ^^^^
NameError: name 'roud' is not defined. Did you mean: 'round'?
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-08-28 22:30:09)
-- CODE: 
peso_gramas = float(input())
quant_diaria_gramas = float(input())
cincodias = quant_diaria_gramas*5
resto = peso_gramas - cincodias
print(roud(resto,2))
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
1034.4
18.55
---- correct output:
941.65
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 5, in <module>
    print(roud(resto,2))
          ^^^^
NameError: name 'roud' is not defined. Did you mean: 'round'?
-- TEST CASE 2:
---- input:
1427.6
21.91
---- correct output:
1318.05
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 5, in <module>
    print(roud(resto,2))
          ^^^^
NameError: name 'roud' is not defined. Did you mean: 'round'?
-- TEST CASE 3:
---- input:
2807.90
40.38
---- correct output:
2606.0
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 5, in <module>
    print(roud(resto,2))
          ^^^^
NameError: name 'roud' is not defined. Did you mean: 'round'?
-- TEST CASE 4:
---- input:
1000.3333
20.11
---- correct output:
899.78
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 5, in <module>
    print(roud(resto,2))
          ^^^^
NameError: name 'roud' is not defined. Did you mean: 'round'?
-- TEST CASE 5:
---- input:
8000.3333
20.11
---- correct output:
7899.78
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 5, in <module>
    print(roud(resto,2))
          ^^^^
NameError: name 'roud' is not defined. Did you mean: 'round'?
-- TEST CASE 6:
---- input:
2912
21.80
---- correct output:
2803.0
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 5, in <module>
    print(roud(resto,2))
          ^^^^
NameError: name 'roud' is not defined. Did you mean: 'round'?
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-08-28 22:29:22)
-- CODE: 
peso_gramas = float(input())
quant_diaria_gramas = float(input())
quatrodias = quant_diaria_gramas*4
resto = peso_gramas - quatrodias
print(roud(resto,2))
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
1034.4
18.55
---- correct output:
941.65
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 5, in <module>
    print(roud(resto,2))
          ^^^^
NameError: name 'roud' is not defined. Did you mean: 'round'?
-- TEST CASE 2:
---- input:
1427.6
21.91
---- correct output:
1318.05
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 5, in <module>
    print(roud(resto,2))
          ^^^^
NameError: name 'roud' is not defined. Did you mean: 'round'?
-- TEST CASE 3:
---- input:
2807.90
40.38
---- correct output:
2606.0
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 5, in <module>
    print(roud(resto,2))
          ^^^^
NameError: name 'roud' is not defined. Did you mean: 'round'?
-- TEST CASE 4:
---- input:
1000.3333
20.11
---- correct output:
899.78
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 5, in <module>
    print(roud(resto,2))
          ^^^^
NameError: name 'roud' is not defined. Did you mean: 'round'?
-- TEST CASE 5:
---- input:
8000.3333
20.11
---- correct output:
7899.78
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 5, in <module>
    print(roud(resto,2))
          ^^^^
NameError: name 'roud' is not defined. Did you mean: 'round'?
-- TEST CASE 6:
---- input:
2912
21.80
---- correct output:
2803.0
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 5, in <module>
    print(roud(resto,2))
          ^^^^
NameError: name 'roud' is not defined. Did you mean: 'round'?
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-08-28 22:29:00)
-- CODE: 
peso_gramas = float(input())
quant_diaria_gramas = float(input())



quatrodias = quant_diaria_gramas*4

resto = peso_gramas - quatrodias

print(roud(resto,2))
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
1034.4
18.55
---- correct output:
941.65
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 10, in <module>
    print(roud(resto,2))
          ^^^^
NameError: name 'roud' is not defined. Did you mean: 'round'?
-- TEST CASE 2:
---- input:
1427.6
21.91
---- correct output:
1318.05
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 10, in <module>
    print(roud(resto,2))
          ^^^^
NameError: name 'roud' is not defined. Did you mean: 'round'?
-- TEST CASE 3:
---- input:
2807.90
40.38
---- correct output:
2606.0
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 10, in <module>
    print(roud(resto,2))
          ^^^^
NameError: name 'roud' is not defined. Did you mean: 'round'?
-- TEST CASE 4:
---- input:
1000.3333
20.11
---- correct output:
899.78
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 10, in <module>
    print(roud(resto,2))
          ^^^^
NameError: name 'roud' is not defined. Did you mean: 'round'?
-- TEST CASE 5:
---- input:
8000.3333
20.11
---- correct output:
7899.78
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 10, in <module>
    print(roud(resto,2))
          ^^^^
NameError: name 'roud' is not defined. Did you mean: 'round'?
-- TEST CASE 6:
---- input:
2912
21.80
---- correct output:
2803.0
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 10, in <module>
    print(roud(resto,2))
          ^^^^
NameError: name 'roud' is not defined. Did you mean: 'round'?
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-08-28 22:30:10)
-- CODE: 
peso_gramas = float(input())
quant_diaria_gramas = float(input())
cincodias = quant_diaria_gramas*5
resto = peso_gramas - cincodias
print(roud(resto,2))
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
1034.4
18.55
---- correct output:
941.65
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 5, in <module>
    print(roud(resto,2))
          ^^^^
NameError: name 'roud' is not defined. Did you mean: 'round'?
-- TEST CASE 2:
---- input:
1427.6
21.91
---- correct output:
1318.05
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 5, in <module>
    print(roud(resto,2))
          ^^^^
NameError: name 'roud' is not defined. Did you mean: 'round'?
-- TEST CASE 3:
---- input:
2807.90
40.38
---- correct output:
2606.0
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 5, in <module>
    print(roud(resto,2))
          ^^^^
NameError: name 'roud' is not defined. Did you mean: 'round'?
-- TEST CASE 4:
---- input:
1000.3333
20.11
---- correct output:
899.78
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 5, in <module>
    print(roud(resto,2))
          ^^^^
NameError: name 'roud' is not defined. Did you mean: 'round'?
-- TEST CASE 5:
---- input:
8000.3333
20.11
---- correct output:
7899.78
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 5, in <module>
    print(roud(resto,2))
          ^^^^
NameError: name 'roud' is not defined. Did you mean: 'round'?
-- TEST CASE 6:
---- input:
2912
21.80
---- correct output:
2803.0
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 5, in <module>
    print(roud(resto,2))
          ^^^^
NameError: name 'roud' is not defined. Did you mean: 'round'?
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-08-28 22:30:23)
-- CODE: 
peso_gramas = float(input())
quant_diaria_gramas = float(input())
cincodias = quant_diaria_gramas*5
resto = peso_gramas - cincodias
print(roud(resto,2))
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
1034.4
18.55
---- correct output:
941.65
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 5, in <module>
    print(roud(resto,2))
          ^^^^
NameError: name 'roud' is not defined. Did you mean: 'round'?
-- TEST CASE 2:
---- input:
1427.6
21.91
---- correct output:
1318.05
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 5, in <module>
    print(roud(resto,2))
          ^^^^
NameError: name 'roud' is not defined. Did you mean: 'round'?
-- TEST CASE 3:
---- input:
2807.90
40.38
---- correct output:
2606.0
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 5, in <module>
    print(roud(resto,2))
          ^^^^
NameError: name 'roud' is not defined. Did you mean: 'round'?
-- TEST CASE 4:
---- input:
1000.3333
20.11
---- correct output:
899.78
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 5, in <module>
    print(roud(resto,2))
          ^^^^
NameError: name 'roud' is not defined. Did you mean: 'round'?
-- TEST CASE 5:
---- input:
8000.3333
20.11
---- correct output:
7899.78
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 5, in <module>
    print(roud(resto,2))
          ^^^^
NameError: name 'roud' is not defined. Did you mean: 'round'?
-- TEST CASE 6:
---- input:
2912
21.80
---- correct output:
2803.0
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 5, in <module>
    print(roud(resto,2))
          ^^^^
NameError: name 'roud' is not defined. Did you mean: 'round'?
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-08-28 22:31:08)
-- CODE: 

-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
1034.4
18.55
---- correct output:
941.65
---- user output:
None
-- TEST CASE 2:
---- input:
1427.6
21.91
---- correct output:
1318.05
---- user output:
None
-- TEST CASE 3:
---- input:
2807.90
40.38
---- correct output:
2606.0
---- user output:
None
-- TEST CASE 4:
---- input:
1000.3333
20.11
---- correct output:
899.78
---- user output:
None
-- TEST CASE 5:
---- input:
8000.3333
20.11
---- correct output:
7899.78
---- user output:
None
-- TEST CASE 6:
---- input:
2912
21.80
---- correct output:
2803.0
---- user output:
None
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-08-28 22:28:18)
-- CODE: 
peso_gramas = float(input())
quant_diaria_gramas = float(input())



quatrodias = quant_diaria_gramas*4

resto = peso_gramas - quatrodias

print(roud(resto,2))
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
1034.4
18.55
---- correct output:
941.65
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 10, in <module>
    print(roud(resto,2))
          ^^^^
NameError: name 'roud' is not defined. Did you mean: 'round'?
-- TEST CASE 2:
---- input:
1427.6
21.91
---- correct output:
1318.05
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 10, in <module>
    print(roud(resto,2))
          ^^^^
NameError: name 'roud' is not defined. Did you mean: 'round'?
-- TEST CASE 3:
---- input:
2807.90
40.38
---- correct output:
2606.0
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 10, in <module>
    print(roud(resto,2))
          ^^^^
NameError: name 'roud' is not defined. Did you mean: 'round'?
-- TEST CASE 4:
---- input:
1000.3333
20.11
---- correct output:
899.78
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 10, in <module>
    print(roud(resto,2))
          ^^^^
NameError: name 'roud' is not defined. Did you mean: 'round'?
-- TEST CASE 5:
---- input:
8000.3333
20.11
---- correct output:
7899.78
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 10, in <module>
    print(roud(resto,2))
          ^^^^
NameError: name 'roud' is not defined. Did you mean: 'round'?
-- TEST CASE 6:
---- input:
2912
21.80
---- correct output:
2803.0
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 10, in <module>
    print(roud(resto,2))
          ^^^^
NameError: name 'roud' is not defined. Did you mean: 'round'?
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-08-28 22:32:48)
-- CODE: 
peso_gramas = float(input())
quant_diaria_gramas = float(input())
cincodias = quant_diaria_gramas*5
resto = peso_gramas - cincodias
print(round(resto,2))
-- EXECUTION TIME: 
0.01
-- TEST CASE 1:
---- input:
1034.4
18.55
---- correct output:
941.65
---- user output:
941.65
-- TEST CASE 2:
---- input:
1427.6
21.91
---- correct output:
1318.05
---- user output:
1318.05
-- TEST CASE 3:
---- input:
2807.90
40.38
---- correct output:
2606.0
---- user output:
2606.0
-- TEST CASE 4:
---- input:
1000.3333
20.11
---- correct output:
899.78
---- user output:
899.78
-- TEST CASE 5:
---- input:
8000.3333
20.11
---- correct output:
7899.78
---- user output:
7899.78
-- TEST CASE 6:
---- input:
2912
21.80
---- correct output:
2803.0
---- user output:
2803.0
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-08-28 22:31:08)
-- CODE: 
peso_gramas = float(input())
quant_diaria_gramas = float(input())
cincodias = quant_diaria_gramas*5
resto = peso_gramas - cincodias
print(roud(resto,2))
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
1034.4
18.55
---- correct output:
941.65
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 5, in <module>
    print(roud(resto,2))
          ^^^^
NameError: name 'roud' is not defined. Did you mean: 'round'?
-- TEST CASE 2:
---- input:
1427.6
21.91
---- correct output:
1318.05
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 5, in <module>
    print(roud(resto,2))
          ^^^^
NameError: name 'roud' is not defined. Did you mean: 'round'?
-- TEST CASE 3:
---- input:
2807.90
40.38
---- correct output:
2606.0
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 5, in <module>
    print(roud(resto,2))
          ^^^^
NameError: name 'roud' is not defined. Did you mean: 'round'?
-- TEST CASE 4:
---- input:
1000.3333
20.11
---- correct output:
899.78
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 5, in <module>
    print(roud(resto,2))
          ^^^^
NameError: name 'roud' is not defined. Did you mean: 'round'?
-- TEST CASE 5:
---- input:
8000.3333
20.11
---- correct output:
7899.78
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 5, in <module>
    print(roud(resto,2))
          ^^^^
NameError: name 'roud' is not defined. Did you mean: 'round'?
-- TEST CASE 6:
---- input:
2912
21.80
---- correct output:
2803.0
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 5, in <module>
    print(roud(resto,2))
          ^^^^
NameError: name 'roud' is not defined. Did you mean: 'round'?
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-08-28 22:31:07)
-- CODE: 
peso_gramas = float(input())
quant_diaria_gramas = float(input())
cincodias = quant_diaria_gramas*5
resto = peso_gramas - cincodias
print(roud(resto,2))
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
1034.4
18.55
---- correct output:
941.65
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 5, in <module>
    print(roud(resto,2))
          ^^^^
NameError: name 'roud' is not defined. Did you mean: 'round'?
-- TEST CASE 2:
---- input:
1427.6
21.91
---- correct output:
1318.05
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 5, in <module>
    print(roud(resto,2))
          ^^^^
NameError: name 'roud' is not defined. Did you mean: 'round'?
-- TEST CASE 3:
---- input:
2807.90
40.38
---- correct output:
2606.0
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 5, in <module>
    print(roud(resto,2))
          ^^^^
NameError: name 'roud' is not defined. Did you mean: 'round'?
-- TEST CASE 4:
---- input:
1000.3333
20.11
---- correct output:
899.78
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 5, in <module>
    print(roud(resto,2))
          ^^^^
NameError: name 'roud' is not defined. Did you mean: 'round'?
-- TEST CASE 5:
---- input:
8000.3333
20.11
---- correct output:
7899.78
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 5, in <module>
    print(roud(resto,2))
          ^^^^
NameError: name 'roud' is not defined. Did you mean: 'round'?
-- TEST CASE 6:
---- input:
2912
21.80
---- correct output:
2803.0
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 5, in <module>
    print(roud(resto,2))
          ^^^^
NameError: name 'roud' is not defined. Did you mean: 'round'?
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-08-28 22:28:19)
-- CODE: 
peso_gramas = float(input())
quant_diaria_gramas = float(input())



quatrodias = quant_diaria_gramas*4

resto = peso_gramas - quatrodias

print(roud(resto,2))
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
1034.4
18.55
---- correct output:
941.65
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 10, in <module>
    print(roud(resto,2))
          ^^^^
NameError: name 'roud' is not defined. Did you mean: 'round'?
-- TEST CASE 2:
---- input:
1427.6
21.91
---- correct output:
1318.05
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 10, in <module>
    print(roud(resto,2))
          ^^^^
NameError: name 'roud' is not defined. Did you mean: 'round'?
-- TEST CASE 3:
---- input:
2807.90
40.38
---- correct output:
2606.0
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 10, in <module>
    print(roud(resto,2))
          ^^^^
NameError: name 'roud' is not defined. Did you mean: 'round'?
-- TEST CASE 4:
---- input:
1000.3333
20.11
---- correct output:
899.78
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 10, in <module>
    print(roud(resto,2))
          ^^^^
NameError: name 'roud' is not defined. Did you mean: 'round'?
-- TEST CASE 5:
---- input:
8000.3333
20.11
---- correct output:
7899.78
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 10, in <module>
    print(roud(resto,2))
          ^^^^
NameError: name 'roud' is not defined. Did you mean: 'round'?
-- TEST CASE 6:
---- input:
2912
21.80
---- correct output:
2803.0
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 10, in <module>
    print(roud(resto,2))
          ^^^^
NameError: name 'roud' is not defined. Did you mean: 'round'?
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-08-28 22:31:08)
-- CODE: 
peso_gramas = float(input())
quant_diaria_gramas = float(input())
cincodias = quant_diaria_gramas*5
resto = peso_gramas - cincodias
print(roud(resto,2))
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
1034.4
18.55
---- correct output:
941.65
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 5, in <module>
    print(roud(resto,2))
          ^^^^
NameError: name 'roud' is not defined. Did you mean: 'round'?
-- TEST CASE 2:
---- input:
1427.6
21.91
---- correct output:
1318.05
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 5, in <module>
    print(roud(resto,2))
          ^^^^
NameError: name 'roud' is not defined. Did you mean: 'round'?
-- TEST CASE 3:
---- input:
2807.90
40.38
---- correct output:
2606.0
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 5, in <module>
    print(roud(resto,2))
          ^^^^
NameError: name 'roud' is not defined. Did you mean: 'round'?
-- TEST CASE 4:
---- input:
1000.3333
20.11
---- correct output:
899.78
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 5, in <module>
    print(roud(resto,2))
          ^^^^
NameError: name 'roud' is not defined. Did you mean: 'round'?
-- TEST CASE 5:
---- input:
8000.3333
20.11
---- correct output:
7899.78
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 5, in <module>
    print(roud(resto,2))
          ^^^^
NameError: name 'roud' is not defined. Did you mean: 'round'?
-- TEST CASE 6:
---- input:
2912
21.80
---- correct output:
2803.0
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 5, in <module>
    print(roud(resto,2))
          ^^^^
NameError: name 'roud' is not defined. Did you mean: 'round'?
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
